applications/test-api-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: testapiserversvc
spec:
  ports:
    - port: 8080
  selector:
    app: testapiserver
