applications/test-api-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapiserver-ingress
  labels:
    role: frontend
spec:
  ingressClassName: traefik
  type: ClusterIP
  rules:
    - http:
        paths:
          - path: /view/customer
            pathType: Prefix
            backend:
              service:
                name: testapiserversvc
                port:
                  number: 8080
