applications/test-api-server/ciliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: testapiserver
specs:
  - endpointSelector:
      matchLabels:
        app: testapiserver
    ingress:
      - fromEntities:
        - world
        toPorts:
          - ports:
              - port: "8080"
    egress:
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: kube-system
              k8s-app: kube-dns
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
            rules:
              dns:
                - matchPattern: "*"
      - toServices:
          - k8sService:
              serviceName: testapibackendsvc
              namespace: assignment
        toPorts:
          - ports:
              - port: "10000"
